--- a/style.css
+++ b/style.css
@@ -2,13 +2,8 @@ body{
     text-align : center;
 }
 
-h1{
-    border-top : solid;
-    border-left : solid;
-    border-right : solid;
-}
-#uwu{
-    border-bottom : solid;
-    border-left : solid;
-    border-right : solid; 
+
+img{
+    width: 500px;
+    height: 400px;
 }
